# tribble-backup

./: CMakeLists.txt
meta/: FindGlog.cmake  LintRules.cmake  UseCodeCoverage.cmake  cpplint.py
qt/backup2/: CMakeLists.txt  Graphics.qrc  backup2.pro  backup_driver.cpp  backup_driver.h  backup_helper.cpp  backup_helper.h  backup_snapshot_manager.cpp  backup_snapshot_manager.h  dummy_vss_proxy.h  fader_widget.cpp  fader_widget.h  file_selector_model.cpp  file_selector_model.h  icon_provider.cpp  icon_provider.h  label_history_dlg.cpp  label_history_dlg.h  label_history_dlg.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manage_labels_dlg.cpp  manage_labels_dlg.h  manage_labels_dlg.ui  please_wait_dlg.cpp  please_wait_dlg.h  please_wait_dlg.ui  restore_driver.cpp  restore_driver.h  restore_helper.cpp  restore_helper.h  restore_selector_model.cpp  restore_selector_model.h  verify_driver.cpp  verify_driver.h  verify_helper.cpp  verify_helper.h  vss_proxy.cpp  (+2 more)
qt/backup2/modeltest/: modeltest.cpp  modeltest.pro
src/: CMakeLists.txt  backup_driver.cc  backup_driver.h  backup_library.cc  backup_library.h  backup_library_test.cc  backup_volume.cc  backup_volume.h  backup_volume_defs.h  backup_volume_interface.h  backup_volume_test.cc  callback.h  callback_test.cc  chunk_map.h  cli_main.cc  common.h  encoding_interface.h  fake_backup_volume.h  fake_file.h  file.cc  file.h  file_interface.h  file_test.cc  fileset.cc  fileset.h  gzip_encoder.cc  gzip_encoder.h  md5.h  md5_generator.cc  md5_generator.h  md5_generator_interface.h  md5_generator_test.cc  mock_backup_volume_factory.h  mock_encoder.h  mock_file.h  mock_md5_generator.h  restore_driver.cc  restore_driver.h  status.cc  status.h  (+1 more)
src/msvc/: unistd.h  unix_time.h
